--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+    - Minor code cleanup
+    - Metadata cleanup
+
 0.001     2017-09-14 10:00:38-07:00 America/Los_Angeles
 
     - Initial Release
