--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Support passing an array of lines in
+
 0.002     2017-09-14 10:29:35-07:00 America/Los_Angeles
 
     - Minor code cleanup
