--- a/README
+++ b/README
@@ -52,6 +52,15 @@ SYNOPSIS
     
         print "Did not go to a file\n";
 
+    Another thing you can do:
+
+        use goto::file [
+            'print "Hi!\n";',
+            "exit 0",
+        ];
+    
+        die "Will not get here";
+
 NOTES
 
     __DATA__ and <DATA>
