--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Better handling of strange EOFs
+
 0.003     2017-09-14 14:13:45-07:00 America/Los_Angeles
 
     - Support passing an array of lines in
